add delete offert route
