# src/swagger/swagger_output.yaml
@@ -68,6 +68,23 @@ paths:
         "500":
           description: Internal Server Error
       security:
+      - bearerAuth: []
+    delete:
+      tags:
+      - Offers
+      description: "Delete an offer by his ID"
+      parameters:
+      - $ref: "#/components/parameters/idParam"
+      responses:
+        "204":
+          description: No Content
+        "401":
+          description: Unauthorized
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
       - bearerAuth: []            
 components:
   securitySchemes:
